update(overflow): fixed a small overflow error

--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -108,7 +108,7 @@
         height: auto;
     }
     .container-fluid {
-        overflow: hidden;
+        overflow-x: hidden;
     }
 }
 
